started to use jest getData test writen with it

--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "cheerio": "latest"
   },
   "scripts": {
-    "start": "node ."
+    "start": "node .",
+    "test": "jest /test --detectOpenHandles"
+  },
+  "devDependencies": {
+    "jest": "^24.8.0"
   }
 }
