--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "index.js",
   "author": "Shika",
   "dependencies": {
-    "express": "latest",
-    "request": "latest",
-    "cheerio": "latest"
+    "express": "~4.17.1",
+    "request": "~2.88.0",
+    "cheerio": "~1.0.0-rc.3",
+    "redis": "~2.8.0"
   },
   "scripts": {
     "start": "node .",
