--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "test": "jest /test --detectOpenHandles"
   },
   "devDependencies": {
-    "jest": "^24.8.0"
+    "jest": "^24.8.0",
+    "supertest": "^4.0.2",
+    "supertest-as-promised": "^4.0.2"
   }
 }
