--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,17 @@
+sudo: false
 language: node_js
-node_js: 
+node_js:
+    - "8"
+    - "9"
+    - "10"
   - "stable"
+services:
+  - redis-server
 cache:
   directories:
     - "node_modules"
+services:
+    - redis
+script:
+    - npm install
+    - npm run test
